--- a/Readme
+++ b/Readme
@@ -1,3 +1,4 @@
 # Projeto-Pizzaria
 Projeto criado no curso Javascript.
 tela de cardapio de algumas pizzas usando Javascript, Html e Css.
+Tela criada para desktop e mobile.
