--- a/Readme
+++ b/Readme
@@ -1,3 +1,8 @@
+- Projeto de uma pagina de compras de pizza
+LINK:
+https://page-pizzaria.vercel.app/
+
+
 # Projeto-Pizzaria
 Projeto criado no curso Javascript.
 tela de cardapio de algumas pizzas usando Javascript, Html e Css.
